[feature] adicionar endpoint de listagem de status das aulas.
